<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_tasks"
            android:icon="@drawable/ic_calendar"
            android:title="@string/todas_tarefas" />
        <item
            android:id="@+id/nav_next7day"
            android:icon="@drawable/ic_calendar"
            android:title="@string/proximos_7_dias" />
        <item
            android:id="@+id/nav_overdue"
            android:icon="@drawable/ic_expired"
            android:title="@string/expiradas" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/sair" />
    </group>
</menu>